Fix bug where call to action button for campains were getting clipped at thinner screen widths

--- a/scss/components/_campain.scss
+++ b/scss/components/_campain.scss
@@ -7,4 +7,8 @@
     aspect-ratio: 4/1.8;
     background-position-y: center;
     margin-bottom: u.em(80);
+
+    @include u.maxMedia(500) {
+        aspect-ratio: 4/3;
+    }
 }
